# ktrialroom

./: .gitignore  CURSOR_BUILD_PROMPT.md  LICENSE  PRD.md  README.md  SYSTEM_ARCHITECTURE.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: fp32_vs_fp16.py  memory_profiler.py
configs/: inference_config.yaml  model_config.yaml  optimization_config.yaml
docs/: COMPLETION_CHECKLIST.md  INTERVIEW_PREP.md
scripts/: debug_five_imports.py  download_idm_weights.sh  final_commit.sh  minimal_inference.py  record_demo.sh  test_critical_imports.py  validate_siliconvton.py  verify_inference_output.py  verify_resume_alignment.py
siliconvton/: __init__.py
siliconvton/core/: diffusion_engine.py  quality_metrics.py  vton_pipeline.py
siliconvton/models/: model_loader.py
siliconvton/optimization/: benchmark.py  memory_manager.py  precision_handler.py
siliconvton/preprocessing/: garment_warper.py  image_validator.py  mask_builder.py  pose_canvas.py  pose_estimator.py  segmenter.py
siliconvton/utils/: config_loader.py  device_utils.py  image_utils.py  logger.py  project_config.py
tests/: conftest.py  test_device_utils.py  test_image_validator.py  test_instantiation.py  test_mask_builder.py  test_quality_metrics.py  test_vton_pipeline_mocked.py  test_weights_loaded.py
ui/: gradio_app.py
