[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "siliconvton"
version = "0.1.0"
description = "Local-first IDM-VTON inference tooling for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["siliconvton*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: downloads weights or runs heavy models",
]
